trying to fix responsiveness on iPhones pt. 2

--- a/css/main.css
+++ b/css/main.css
@@ -1,5 +1,6 @@
 body
 {
+        -webkit-text-size-adjust: 100%;
         margin: 0;
         background-color: #fdfdfd;
 
